# server/router/router.go
@@ -22,5 +22,14 @@ func ApplyRoutes(r *gin.Engine) {
 			members.PATCH(":id", c.UpdateMember)
 			members.DELETE(":id", c.DeleteMember)
 		}
+		problems := v1.Group("/problems")
+		{
+			problems.GET("", c.ListProblems)
+			problems.GET(":id", c.ShowProblem)
+			problems.POST("", c.AddProblem)
+			problems.PATCH(":id", c.UpdateProblem)
+			problems.DELETE(":id", c.DeleteProblem)
+		}
 	}
+
 }
